Alterado para demo.
trocado floripasec por caixa de msg;
criado tooltip avisando sobre edição com duplo clique;
comentado a exportação xml;
adicionado msg de confirmação ao cadastrar pendência;

--- a/LicençasFloripa/Views/PesquisaGeral.xaml
+++ b/LicençasFloripa/Views/PesquisaGeral.xaml
@@ -49,7 +49,11 @@
                 <DataGridTextColumn Binding="{Binding Negócio}" Header="Negócio"/>
                 <DataGridTextColumn Binding="{Binding Observações}" Header="Observações"/>
             </DataGrid.Columns>
-        </DataGrid>
 
+            <DataGrid.ToolTip>
+                <ToolTip VerticalOffset="-50">Duplo clique para editar.</ToolTip>
+            </DataGrid.ToolTip>
+
+        </DataGrid>
     </Grid>
 </UserControl>
