--- a/LicençasFloripa/App.xaml
+++ b/LicençasFloripa/App.xaml
@@ -4,6 +4,7 @@
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
+            
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
@@ -11,6 +12,17 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
                 <ResourceDictionary Source="MaterialDesignThemes.Overrides.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            
+            <Style TargetType="TextBox" BasedOn="{StaticResource MaterialDesignFloatingHintTextBox}">
+                <Setter Property="Width" Value="auto"/>
+            </Style>
+            
+            <Style TargetType="RadioButton" BasedOn="{StaticResource MaterialDesignRadioButton}">
+                <Setter Property="Foreground" Value="#FF656570"/>
+                <Setter Property="FontSize" Value="14"/>
+            </Style>
+
         </ResourceDictionary>
     </Application.Resources>
+
 </Application>
