--- a/LicençasFloripa/Views/CadastroEquipamento.xaml
+++ b/LicençasFloripa/Views/CadastroEquipamento.xaml
@@ -27,38 +27,47 @@
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
 
-        <TextBlock x:Name="TextTitulo" Foreground="#FF2196F3" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="20" VerticalAlignment="Top" 
-                   FontSize="26" FontWeight="ExtraBold" HorizontalAlignment="Center"/>
+        <TextBlock x:Name="TextTitulo" 
+                   Foreground="#FF2196F3" 
+                   Grid.Column="0"
+                   Grid.Row="0"
+                   Grid.ColumnSpan="2" 
+                   Margin="20" 
+                   VerticalAlignment="Top" 
+                   FontSize="26" 
+                   FontWeight="ExtraBold"
+                   HorizontalAlignment="Center">
+        </TextBlock>
 
         <StackPanel Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch">
-            <TextBox x:Name="Cliente" materialDesign:HintAssist.Hint="Cliente (Empresa)" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto"/>
-            <TextBox x:Name="Contato" materialDesign:HintAssist.Hint="Contato" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto"/>
-            <TextBox x:Name="Email" materialDesign:HintAssist.Hint="Email" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto"/>
-            <TextBox x:Name="NomePc" materialDesign:HintAssist.Hint="Nome do Computador" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto"/>
-            <TextBox x:Name="SN" materialDesign:HintAssist.Hint="Número de Série do Equipamento" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto"/>
-            <TextBox x:Name="Placa" materialDesign:HintAssist.Hint="Placa de Captura" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto"/>
-            <TextBox x:Name="Data" Text="{Binding Source={x:Static sys:DateTime.Now}, Mode=OneWay,  StringFormat='dd/MM/yyyy'}" materialDesign:HintAssist.Hint="Data de Registro" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto"/>
+            <TextBox x:Name="Cliente" materialDesign:HintAssist.Hint="Cliente (Empresa)" Margin="10"/>
+            <TextBox x:Name="Contato" materialDesign:HintAssist.Hint="Contato" Margin="10"/>
+            <TextBox x:Name="Email" materialDesign:HintAssist.Hint="Email" Margin="10" Width="auto"/>
+            <TextBox x:Name="NomePc" materialDesign:HintAssist.Hint="Nome do Computador" Margin="10"/>
+            <TextBox x:Name="SN" materialDesign:HintAssist.Hint="Número de Série do Equipamento" Margin="10"/>
+            <TextBox x:Name="Placa" materialDesign:HintAssist.Hint="Placa de Captura" Margin="10"/>
+            <TextBox x:Name="Data" Text="{Binding Source={x:Static sys:DateTime.Now}, Mode=OneWay, StringFormat='dd/MM/yyyy'}" materialDesign:HintAssist.Hint="Data de Registro" Margin="10"/>
         </StackPanel>
         <StackPanel Margin="0,-11,0,0" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch">
             <StackPanel Margin="10,21,0,10" Orientation="Horizontal">
-                <RadioButton x:Name="RadDef" Click="RadDef_Click" Foreground="#FF656570" FontSize="14">Definitiva</RadioButton>
-                <RadioButton x:Name="RadParc" Click="RadParc_Click" Foreground="#FF656570" FontSize="14" Margin="10,0,0,0">Parcial:</RadioButton>
-                <TextBox x:Name="ParcNum" materialDesign:HintAssist.Hint="N°" Margin="8,-3,0,2" Width="30"></TextBox>
+                <RadioButton x:Name="RadDef" Click="RadDef_Click">Definitiva</RadioButton>
+                <RadioButton x:Name="RadParc" Click="RadParc_Click" Margin="10,0,0,0">Parcial:</RadioButton>
+                <TextBox x:Name="ParcNum" materialDesign:HintAssist.Hint="N°" Style="{StaticResource MaterialDesignTextBox}" Margin="8,-3,0,2" Width="30"></TextBox>
             </StackPanel>
             <Separator Margin="10,2,10,0"/>
             <StackPanel Margin="10,28,0,10" Orientation="Horizontal">
-                <RadioButton x:Name="RadVenda" Checked="RadVenda_Click" Foreground="#FF656570" FontSize="14" Margin="0,0,10,0" IsChecked="True">Venda</RadioButton>
-                <RadioButton x:Name="RadDemo" Checked="RadDemo_Click" Foreground="#FF656570" FontSize="14" Margin="0,0,10,0">Demo</RadioButton>
-                <RadioButton x:Name="RadAlguel" Checked="RadAlguel_Click" Foreground="#FF656570" FontSize="14" Margin="0,0,10,0">Aluguel</RadioButton>
-                <RadioButton x:Name="RadFeira" Checked="RadFeira_Click" Foreground="#FF656570" FontSize="14" Margin="0,0,10,0">Feira</RadioButton>
+                <RadioButton x:Name="RadVenda" Checked="RadVenda_Click" Margin="0,0,10,0" IsChecked="True">Venda</RadioButton>
+                <RadioButton x:Name="RadDemo" Checked="RadDemo_Click" Margin="0,0,10,0">Demo</RadioButton>
+                <RadioButton x:Name="RadAlguel" Checked="RadAlguel_Click" Margin="0,0,10,0">Aluguel</RadioButton>
+                <RadioButton x:Name="RadFeira" Checked="RadFeira_Click" Margin="0,0,10,0">Feira</RadioButton>
             </StackPanel>
             <Separator Margin="10,0,10,0"/>
-            <TextBox x:Name="Senha" materialDesign:HintAssist.Hint="Contra Senha (FloripaSec)" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10,20,10,10" Width="auto" MaxLength="16"/>
-            <TextBox x:Name="Dongle" materialDesign:HintAssist.Hint="Valor (FloripaSec)" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto" MaxLength="8"/>
-            <TextBox x:Name="Licença" materialDesign:HintAssist.Hint="Licença (FloripaSec Número de Série)" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto" MaxLength="32"/>
-            <TextBox x:Name="Func" materialDesign:HintAssist.Hint="Funcionário Floripa" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto"/>
-            <TextBox x:Name="FlopSec" materialDesign:HintAssist.Hint="Versão FloripaSec" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto"/>
-            <TextBox x:Name="Obs" materialDesign:HintAssist.Hint="Observações" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto" VerticalScrollBarVisibility="Auto" MaxLines="3" TextWrapping="Wrap"/>
+            <TextBox x:Name="Senha" materialDesign:HintAssist.Hint="Contra Senha (FloripaSec)" Margin="10,20,10,10" MaxLength="16"/>
+            <TextBox x:Name="Dongle" materialDesign:HintAssist.Hint="Valor (FloripaSec)" Margin="10" MaxLength="8"/>
+            <TextBox x:Name="Licença" materialDesign:HintAssist.Hint="Licença (FloripaSec Número de Série)" Margin="10" MaxLength="32"/>
+            <TextBox x:Name="Func" materialDesign:HintAssist.Hint="Funcionário Floripa" Margin="10"/>
+            <TextBox x:Name="FlopSec" materialDesign:HintAssist.Hint="Versão FloripaSec" Margin="10"/>
+            <TextBox x:Name="Obs" materialDesign:HintAssist.Hint="Observações" Margin="10" Width="auto" VerticalScrollBarVisibility="Auto" MaxLines="3" TextWrapping="Wrap"/>
         </StackPanel>
 
         <StackPanel Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" VerticalAlignment="Top">
