--- a/LicençasFloripa/Views/PesquisaGeral.xaml
+++ b/LicençasFloripa/Views/PesquisaGeral.xaml
@@ -25,7 +25,7 @@
 
         <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="10">
             <Button IsDefault="True" Width="auto" Content="Pesquisar por:" Click="PesquisarGeral_Click"></Button>
-            <TextBox x:Name="BoxPesquisaGeral" materialDesign:HintAssist.Hint="Informe qualquer dado." Width="500" Margin="8"></TextBox>
+            <TextBox x:Name="BoxPesquisaGeral" materialDesign:HintAssist.Hint="Informe qualquer dado." Style="{StaticResource MaterialDesignTextBox}" Width="500" Margin="8"></TextBox>
         </StackPanel>
 
         <DataGrid x:Name="GridBuscaGeral" AutoGenerateColumns="False" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" IsReadOnly="True" SelectionUnit="FullRow" ClipboardCopyMode="ExcludeHeader" MouseDoubleClick="Row_MouseDoubleClick">
