--- a/LicençasFloripa/Views/PesquisaLicenças.xaml
+++ b/LicençasFloripa/Views/PesquisaLicenças.xaml
@@ -28,38 +28,38 @@
 
         <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="10">
             <Button IsDefault="True" Width="auto" Content="Pesquisar por:" Click="PesquisarLicença_Click"/>
-            <TextBox x:Name="Box_PesquisarAlterar" materialDesign:HintAssist.Hint="ContraSenha / Licença / Valor / SN" Width="500" Margin="7"/>
+            <TextBox x:Name="Box_PesquisarAlterar" materialDesign:HintAssist.Hint="ContraSenha / Licença / Valor / SN" Width="500" Margin="7" Style="{StaticResource MaterialDesignTextBox}"/>
         </StackPanel>
 
         <StackPanel x:Name="StkPanelNegócio" Visibility="Visible" Grid.Row="1" Grid.ColumnSpan="2" Margin="0,10,0,0" Orientation="Horizontal" HorizontalAlignment="Center">
-            <RadioButton x:Name="RadVenda" Checked="RadVenda_Check" Foreground="#FF656570" FontSize="14" Margin="0,0,10,0">Venda</RadioButton>
-            <RadioButton x:Name="RadDemo" Checked="RadDemo_Check" Foreground="#FF656570" FontSize="14" Margin="0,0,10,0">Demo</RadioButton>
-            <RadioButton x:Name="RadAlguel" Checked="RadAlguel_Check" Foreground="#FF656570" FontSize="14" Margin="0,0,10,0">Aluguel</RadioButton>
-            <RadioButton x:Name="RadFeira" Checked="RadFeira_Check" Foreground="#FF656570" FontSize="14" Margin="0,0,10,0">Feira</RadioButton>
+            <RadioButton x:Name="RadVenda" Checked="RadVenda_Check" Margin="0,0,10,0">Venda</RadioButton>
+            <RadioButton x:Name="RadDemo" Checked="RadDemo_Check" Margin="0,0,10,0">Demo</RadioButton>
+            <RadioButton x:Name="RadAlguel" Checked="RadAlguel_Check" Margin="0,0,10,0">Aluguel</RadioButton>
+            <RadioButton x:Name="RadFeira" Checked="RadFeira_Check" Margin="0,0,10,0">Feira</RadioButton>
         </StackPanel>
 
         <StackPanel x:Name="StkPanelColuna1" Visibility="Visible" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <TextBox x:Name="Cliente" materialDesign:HintAssist.Hint="Cliente (Empresa)" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10,10,10,10" Width="auto"/>
-            <TextBox x:Name="Contato" materialDesign:HintAssist.Hint="Contato" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto"/>
-            <TextBox x:Name="Email" materialDesign:HintAssist.Hint="Email" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto"/>
-            <TextBox x:Name="NomePc" materialDesign:HintAssist.Hint="Nome do Computador" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto"/>
-            <TextBox x:Name="SN"  materialDesign:HintAssist.Hint="Número de Série do Equipamento" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto"/>
-            <TextBox x:Name="Placa" materialDesign:HintAssist.Hint="Placa de Captura" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto"/>
-            <TextBox x:Name="MacAdd" materialDesign:HintAssist.Hint="Mac Address" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto"/>
+            <TextBox x:Name="Cliente" materialDesign:HintAssist.Hint="Cliente (Empresa)" Margin="10,10,10,10"/>
+            <TextBox x:Name="Contato" materialDesign:HintAssist.Hint="Contato" Margin="10"/>
+            <TextBox x:Name="Email" materialDesign:HintAssist.Hint="Email" Margin="10"/>
+            <TextBox x:Name="NomePc" materialDesign:HintAssist.Hint="Nome do Computador" Margin="10"/>
+            <TextBox x:Name="SN"  materialDesign:HintAssist.Hint="Número de Série do Equipamento" Margin="10"/>
+            <TextBox x:Name="Placa" materialDesign:HintAssist.Hint="Placa de Captura" Margin="10"/>
+            <TextBox x:Name="MacAdd" materialDesign:HintAssist.Hint="Mac Address" Margin="10"/>
             <WrapPanel>
-                <TextBox x:Name="Data" materialDesign:HintAssist.Hint="Data de Cadastro" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10,10,10,10" Width="137" IsReadOnly="True"/>
-                <TextBox x:Name="DataLicença" materialDesign:HintAssist.Hint="Última Licença" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10,10,0,10" Width="137"/>
+                <TextBox x:Name="Data" materialDesign:HintAssist.Hint="Data de Cadastro" Margin="10,10,10,10" Width="137" IsReadOnly="True"/>
+                <TextBox x:Name="DataLicença" materialDesign:HintAssist.Hint="Última Licença" Margin="10,10,0,10" Width="137"/>
             </WrapPanel>
         </StackPanel>
         <StackPanel x:Name="StkPanelColuna2" Visibility="Visible" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch">
-            <TextBox x:Name="Produto" materialDesign:HintAssist.Hint="Produto" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10,10,10,10" Width="auto"/>
-            <TextBox x:Name="Senha" materialDesign:HintAssist.Hint="Contra Senha (FloripaSec)" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto" IsReadOnly="True"/>
-            <TextBox x:Name="Dongle" materialDesign:HintAssist.Hint="Valor (FloripaSec)" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto" MaxLength="8" IsReadOnly="True"/>
-            <TextBox x:Name="Licença" materialDesign:HintAssist.Hint="Licença (FloripaSec Número de Série)" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto" MaxLength="32"/>
-            <TextBox x:Name="Tipo" materialDesign:HintAssist.Hint="Tipo da Licença" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto" GotFocus="Tipo_GotFocus"/>
-            <TextBox x:Name="Func" materialDesign:HintAssist.Hint="Funcionário Floripa" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto"/>
-            <TextBox x:Name="FlopSec" materialDesign:HintAssist.Hint="Versão FloripaSec" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10" Width="auto"/>
-            <TextBox x:Name="Obs" materialDesign:HintAssist.Hint="Observações" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10,10,10,0" Width="auto" VerticalScrollBarVisibility="Auto" MaxLines="3" TextWrapping="Wrap"/>
+            <TextBox x:Name="Produto" materialDesign:HintAssist.Hint="Produto" Margin="10,10,10,10"/>
+            <TextBox x:Name="Senha" materialDesign:HintAssist.Hint="Contra Senha (FloripaSec)"  Margin="10" IsReadOnly="True"/>
+            <TextBox x:Name="Dongle" materialDesign:HintAssist.Hint="Valor (FloripaSec)" Margin="10" MaxLength="8" IsReadOnly="True"/>
+            <TextBox x:Name="Licença" materialDesign:HintAssist.Hint="Licença (FloripaSec Número de Série)" Margin="10" MaxLength="32"/>
+            <TextBox x:Name="Tipo" materialDesign:HintAssist.Hint="Tipo da Licença" Margin="10" GotFocus="Tipo_GotFocus"/>
+            <TextBox x:Name="Func" materialDesign:HintAssist.Hint="Funcionário Floripa" Margin="10"/>
+            <TextBox x:Name="FlopSec" materialDesign:HintAssist.Hint="Versão FloripaSec" Margin="10"/>
+            <TextBox x:Name="Obs" materialDesign:HintAssist.Hint="Observações" Margin="10,10,10,0" VerticalScrollBarVisibility="Auto" MaxLines="3" TextWrapping="Wrap"/>
         </StackPanel>
 
         <StackPanel Grid.Column="0" Grid.Row="3" VerticalAlignment="Top">
